@@ -138,7 +138,7 @@ public class GoblinWebClientIntegrationTest {
 
         assertTrue(elapsed >= 150, "expected the delay before the WebClient exception, got " + elapsed + "ms");
         assertEquals(2, engine.getHistory().size());
-        assertEquals("latency", engine.getHistory().get(0).type());
+        assertEquals("latency", engine.getHistory().getFirst().type());
         assertEquals("exception", engine.getHistory().get(1).type());
     }
 
